--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             return;
         }
 
-        const workHours = 8 * 60; // 8 hours in minutes
+        const workHours = 8 * 60 + 1; // 8 hours in minutes
 
         // Convert times to Date objects for easier manipulation
         const start = new Date(`1970-01-01T${startTime}:00`);
